--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -62,7 +62,7 @@
   top: 0;
   background: #f8f8ff;
   left: 0;
-  z-index: -1;
+  z-index: 2;
   border-radius: 20px;
   display: block;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
